# spec-agent-workflow

./: .gitignore  README.md  pyproject.toml  run.py
agents/: __init__.py  extract_agent.py  intake_agent.py  prompts.py  write_agent.py
core/: agents.py  errors.py  llm_client.py  manifest.py  models.py  orchestrator.py  router.py  specs.py  steps.py
data/input/: sample_input_1.txt
db/: connection.py  repository.py  schema.sql
docs/: STANDALONE_MIGRATION.md
docs/source/: architecture.rst  conf.py  getting_started.rst  index.rst
docs/source/api/: agents.rst  core.rst  db.rst  index.rst
frontend/: app.py
frontend/components/: context_diff.py  flow_diagram.py  spec_badge.py  step_card.py  trace_timeline.py
frontend/pages/: 1_Run_Workflow.py  2_Run_History.py  3_Run_Detail.py  4_Items_Browser.py  5_Settings.py  6_Architecture.py  7_Manifest.py  8_Documentation.py  9_User_Guide.py
frontend_web/: server.py
frontend_web/static/: app.js  index.html  style.css
manifests/: text_extraction.json  text_extraction.yaml
tests/: conftest.py  test_llm_client.py  test_manifest.py  test_orchestrator.py  test_repository.py  test_specs.py
tests/fixtures/: sample_input_2.txt  sample_manifest.json  sample_manifest.yaml
